# kernalite

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
CMake/: aarch64-toolchain.cmake
docs/: Doxyfile  sctlr.md
scripts/: linker.ld
src/boot/: boot.s
src/include/: string.h
src/include/allocator/: page_allocater.h  page_allocator.h
src/include/error/: error_codes.h  error_strings.h
src/include/fdt/: check.h  fdt.h
src/include/linker/: linker.lds  linker_defines.h  symblos.h  symbols.h
src/include/mmu/: mmu.h  page_table.h
src/include/page_table/: page_table.h
src/include/utils/: fdt.h  kprintf.h  printf.h  string.h  utils.h
src/kernel/: main.c  panic.c
src/kernel/allocator/: page_allocater.c  page_allocator.c
src/kernel/drivers/: uart.c  uart.h
src/kernel/error/: error_strings.c  panic.c
src/kernel/exception_handling/: handler.c  vector.s
src/kernel/exit/: exit.c
src/kernel/fdt/: check.c  fdt.c
src/kernel/mmu/: mmu.c  page_table.c
src/kernel/page_table/: page_table.c
src/kernel/utils/: fdt.c  kprintf.c  printf.c  string.c  utils.c
tests/: dummy.c  linker_symbol_test.c  page_table_map_test.c  test.h  test_runner.c
tools/register_decoder/: Makefile  main.c  sctlr_el1_32.h  sctlr_el1_64.h
